Change client logo

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <a class="close-btn" type="button" href="javascript:closePopup();"><img src="images/close-btn.jpg"/></a>
         <div class="client-details">
           <div class="row">
-            <div class="col-md-6" ><img src="images/client-robinsons.jpg" class="img-responsive"/></div>
+            <div class="col-md-6" ><img src="images/client-alpro.jpg" class="img-responsive"/></div>
             <div class="col-md-6 padding-special">
               <b>Country & Region:</b><br><br>
               Malaysia & Singapore.
