Change Aeon region

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="row padding-20">
             <div class="col-md-12">
               <b>Country & Region:</b><br><br>
-              Cambodia, China, Indonesia, Malaysia, Singapore, Taiwan & Vietnam.
+              Cambodia, China, Indonesia, Malaysia, Singapore, Hong Kong & Vietnam.
             </div>
           </div>
         </div>
